# SignalQ

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agent/: __init__.py  config.py  main.py
agent/audio/: __init__.py
agent/intelligence/: __init__.py  engagement_scorer.py  signal_aggregator.py  trigger_logic.py
agent/llm/: __init__.py  prompt_templates.py
agent/storage/: __init__.py  debrief_generator.py  models.py  session_store.py
agent/vision/: __init__.py  expression.py  face_detector.py  frame_processor.py
api/: __init__.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DebriefTimeline.tsx  EngagementMeter.tsx  WhisperFeed.tsx
frontend/src/pages/: Dashboard.tsx  Debrief.tsx  LiveCall.tsx  TestCall.tsx
notebooks/: signaliq_colab.ipynb
scripts/: generate_token.py
